Fix issue #3547: ctypes is confused by bitfields of varying integer types

Reviewed by Fredrik Lundh and Skip Montanaro.